--- a/styles/main.scss
+++ b/styles/main.scss
@@ -6,3 +6,8 @@ body{
     position: relative;
     min-height: 100vh;
 }
+.invoice-cta{
+    height: 100vh;
+    background: url('/images/invoice-template.png') no-repeat;
+    background-position: center center;
+}
